Added images to report

--- a/docs/incidents/2013-07-01.md
+++ b/docs/incidents/2013-07-01.md
@@ -22,8 +22,8 @@ During the incident there was a drop of about 20% in traffic (see attached Ophan
 - Trim all url paths supplied by the content API to avoid the underlying issue in the future.
 
 ## Appendix
-![Exception](http://cl.ly/image/3A2f2s3F3i0v))
-![Ophan](http://cl.ly/image/3b0F0q3W3m30)
+![Exception](https://raw.github.com/guardian/frontend/master/docs/incidents/images/2013-07-01-exception))
+![Ophan](https://raw.github.com/guardian/frontend/master/docs/incidents/images/2013-07-01-ophan)
 
 
 
