Added GK incident fix commit to report

--- a/docs/incidents/2013-07-01.md
+++ b/docs/incidents/2013-07-01.md
@@ -19,7 +19,7 @@ During the incident there was a drop of about 20% in traffic (see attached Ophan
 
 ## Actions
 - As the boxes were responding quickly we were not notified by PageDuty or CloudWatch. An alert should be set up to monitor 500's over a certain threshold and time period.
-- Trim all url paths supplied by the content API to avoid the underlying issue in the future.
+- Trim all url paths supplied by the content API to avoid the underlying issue in the future. GK fixed this with this [commit](https://github.com/guardian/frontend/commit/bbad0a7eaf1db7e37b0fc5bf7d611d9a378875d8)
 
 ## Appendix
 ![Exception](https://raw.github.com/guardian/frontend/master/docs/incidents/images/2013-07-01-exception))
