Incident report 11 Jul 2013

--- a/docs/incidents/2013-07-11.md
+++ b/docs/incidents/2013-07-11.md
@@ -1,7 +1,7 @@
 # Frontend incident report - 11/07/2013
 
-## 5
-Date 11th July 2013 from 12:00 -> 14:30 (intermittent, not all the time)
+## Date
+11th July 2013 from 12:00 -> 14:30 (intermittent, not all the time)
 
 ## Summary
 At about 11am a new version of the software was deployed to production. A short while later the site started serving
