Add healthcheck detail to incident report
Also renamed incident report with incorrect filename.

--- a/docs/incidents/2013-07-22.md
+++ b/docs/incidents/2013-07-22.md
@@ -19,9 +19,10 @@ taking up to 10 seconds to return queries and connections were timing out.
 
 The number of Article servers was scaled up, however in this case (slow content api) that did not help (it did not hurt either).
 
-
 Further analysis by the Content team revealed that clients (including this team) are still using the 'showMedia()' 
 query which is very expensive and especially so in this case where the article had a lot of media.
+
+Despite the content-api royal birth queries timing out, the backend reported healthy. This is because the content api was still responsive on most other requests, and the healthchecks passed.
 
 The CDN served stale, but because the backend was not reported as unhealthy, it only did so for 60 seconds.
 
